<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="pax">Pax No.</string>
    <string name="smoking">Smoking</string>
    <string name="nosmoking">No Smoking</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="smokings">Smoking?</string>
    <string name="day">Day</string>
</resources>
